# my_astrometry

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/my_astrometry/: annotator.py  catalogs.py  cli.py  coordinates.py  setup_data.py  solver.py  wcs_exif.py
src/my_astrometry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/my_astrometry/data/: constellation_names.json  constellations.json  messier.csv
